# gpu-wm-next

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
cases/hrrr/: README.md
cases/idealized/: density_current.yaml  mountain_wave.yaml  scalar_advection.yaml  warm_bubble.yaml
cmake/: GwmAddMpiTest.cmake
docs/adr/: ADR-0001-toolchain.md  ADR-0002-grid-and-coordinate-system.md  ADR-0003-state-vector.md  ADR-0004-time-integration.md  ADR-0005-decomposition-and-halos.md  ADR-0006-surface-and-screen-operators.md  ADR-0007-ingest-ir-and-io.md  ADR-0008-external-tooling-boundary.md
docs/design/: external_toolchain_integration.md  milestones.md  mpi_milestone_plan.md  source_driven_run_path.md
docs/math/: decomposition_and_halos.md  dry_fast_modes.md  dry_momentum_flux.md  dry_pressure_gradient.md  dycore_overview.md  hybrid_height_coordinate.md  idealized_initialization.md  moisture_tracer_products.md  mpi_halo_exchange.md  plan_view_products.md  prepared_case_runtime.md  screen_obsops.md  state_vector.md  surface_fluxes.md  surface_layer_closure.md  terrain_metric_operators.md  warm_rain_microphysics.md  warm_rain_milestone.md
include/gwm/comm/: cartesian_topology.hpp  collectives.hpp  halo_exchange.hpp  mpi_runtime.hpp  virtual_rank_layout.hpp
include/gwm/core/: cuda_utils.hpp  dry_thermo.hpp  moist_thermo.hpp  runtime_summary.hpp  types.hpp
include/gwm/domain/: grid_metrics.hpp  idealized_domain_builder.hpp  subdomain_descriptor.hpp
include/gwm/dycore/: boundary_conditions.hpp  dry_core.hpp  dry_diagnostics.hpp  dry_fast_modes.hpp  dry_momentum_flux.hpp  dry_pressure_gradient.hpp  dry_transport.hpp  idealized_cases.hpp  passive_tracer.hpp
include/gwm/ingest/: analysis_state.hpp  boundary_cache.hpp  canonical_ir.hpp  json_value.hpp  prepared_case_init.hpp  runtime_case.hpp  source_catalog.hpp
include/gwm/io/: plan_view_output.hpp
include/gwm/obsops/: screen_obsops.hpp
include/gwm/physics/: warm_rain.hpp
include/gwm/state/: face_field.hpp  field3d.hpp  tracer_registry.hpp  tracer_state.hpp
include/gwm/surface/: surface_layer_closure.hpp  surface_layer_exchange.hpp  surface_runtime_init.hpp  surface_state.hpp  surface_static_properties.hpp
scripts/: build_local_windows.ps1  run_gate_b_windows.cmd  run_test_windows.cmd
src/comm/: cartesian_topology.cpp  collectives.cpp  halo_exchange.cpp  mpi_runtime.cpp  virtual_rank_layout.cpp
src/core/: gwm_idealized_driver.cpp  gwm_prepared_case_driver.cpp  runtime_summary.cpp
src/domain/: idealized_domain_builder.cpp
src/dycore/: boundary_conditions.cpp  dry_core.cu  dry_diagnostics.cpp  dry_fast_modes.cu  dry_momentum_flux.cu  dry_pressure_gradient.cu  dry_transport.cu  idealized_cases.cpp
src/ingest/: json_value.cpp  prepared_case_init.cpp  runtime_case.cpp  source_catalog.cpp
src/io/: plan_view_output.cpp
src/obsops/: screen_obsops.cpp
src/physics/: warm_rain.cu
src/surface/: surface_layer_closure.cpp  surface_layer_exchange.cpp
tests/: test_assert.hpp
tests/property/: test_dry_fastmode_virtual_rank_equivalence.cpp  test_dry_momentum_virtual_rank_equivalence.cpp  test_dry_virtual_rank_equivalence.cpp  test_mpi_halo_virtual_rank_equivalence.cpp  test_surface_tile_permutation.cpp  test_terrain_virtual_rank_equivalence.cpp  test_virtual_rank_equivalence.cpp
tests/regression/: test_acoustic_pulse.cpp  test_buoyancy_response.cpp  test_constant_state.cpp  test_density_current_evolution.cpp  test_dry_constant_state_bundle.cpp  test_horizontal_pressure_response.cpp  test_hydrostatic_rest.cpp  test_mountain_wave_evolution.cpp  test_scalar_mass_conservation.cpp  test_surface_layer_neutral_reference.cpp  test_terrain_hydrostatic_rest.cpp  test_warm_rain_closed_box.cpp  test_warm_rain_summary_closure.cpp
tests/unit/: test_boundary_conditions.cpp  test_dry_diagnostics.cpp  test_dry_fast_modes.cpp  test_dry_momentum_flux.cpp  test_dry_pressure_gradient.cpp  test_face_halo_exchange.cpp  test_halo_exchange.cpp  test_hybrid_height_metrics.cpp  test_idealized_cases.cpp  test_idealized_domain_builder.cpp  test_idealized_topography.cpp  test_ingest_contracts.cpp  test_moist_thermo.cpp  test_mpi_cartesian_context.cpp  test_mpi_face_halo_exchange.cpp  test_mpi_face_interface_sync.cpp  test_mpi_halo_mismatch_rejects.cpp  test_mpi_runtime.cpp  test_mpi_scalar_halo_exchange.cpp  test_plan_view_output.cpp  test_prepared_case_init.cpp  test_runtime_case.cpp  test_runtime_summary.cpp  test_scalar_halo_buffers.cpp  test_slow_tendency_composition.cpp  test_source_catalog.cpp  test_surface_layer_closure.cpp  test_surface_obsops.cpp  test_surface_state.cpp  test_surface_static_properties.cpp  test_tracer_registry.cpp  test_warm_rain_microphysics.cpp
tools/casebuilder/: README.md  check_external_toolchain.py  populate_prepared_case.py  prepare_case.py  run_idealized_case.py  run_prepared_case.py  toolchain_manifest.example.toml
tools/verify/: README.md  render_plan_view_maps.py  run_verification.py  test_populate_prepared_case.py  test_source_run_bundle.py
